# NN-cuda

./: .gitignore  README.md
nn cuda/: nn-cuda.sln
nn cuda/nn cuda/: nn cuda.vcxproj
nn-cuda/: .gitignore  CMakeLists.txt  nn-cuda.sln
nn-cuda/dataset/: cleaning.ipynb
nn-cuda/nn-cuda/: MatMul.cu  ModelLayers.hpp  ModelLayersKernels.cuh  ModelLayersKernelsLaunchers.cuh  ModelMemoryHandler.cpp  ModelMemoryHandler.cuh  ModelMemoryHandler.hpp  SGD.cu  array_reduction.cu  array_sum.cu  common.cpp  common.cu  common.cuh  common.h  common.hpp  cpu_main.cpp  cpu_main_merged_cross.cpp  crossEntropy.cu  cross_entropy.cu  cross_entropy.ipynb  kernel.cu  kernels.cuh  kernels_launchers.cuh  linear_backward.cu  linear_forward.cu  log_softmax.cu  main.cu  main_merged_cross.cu  main_training.cu  main_training_cpu.cpp  main_training_cpu_merged_cross.cpp  main_training_merged_cross.cu  matmuls_kernels.cuh  nll_loss.cu  nn-cuda.vcxproj  reduce_on_axis.cu  relu.cu  soft_cross_backward.cu  softmax.cu  softmax_nll.cu
nn-cuda/nn-cuda/outs/: a.exp
nn-cuda/python-codes/: cross_entropy.ipynb  cross_entropy_softmax_backward.ipynb  final.ipynb  softmax.ipynb  testing.ipynb
nn-cuda/with-torch-tests/all-model/: X_c.npy  ln1b.npy  ln1w.npy  ln2b.npy  ln2w.npy  target.npy
nn-cuda/with-torch-tests/all-model-cpu/: X_c.npy  ln1b.npy  ln1w.npy  ln2b.npy  ln2w.npy  target.npy
nn-cuda/with-torch-tests/cross-entropy-layer/: h_losses.npy  h_predictions.npy  h_targets.npy
nn-cuda/with-torch-tests/linear-layer/: W_C.npy  bias_C.npy  out_C.npy
nn-cuda/with-torch-tests/relu-layer/: down_grad_relu.npy  out_relu.npy  up_grad_relu.npy
nn-cuda/with-torch-tests/softmax-layer/: h_inp.npy  h_out.npy
